fix(infra): WBS-2.4.4 评审④修复——补detail边界与丢弃WARN测试+限频改注入Clock+B7竞态修复
- P1-1：detail 值超512截断标记、键超20保留前20+_truncated 两个契约用例（新增2个）
- P1-2：B5 溢出测试补"首丢1条WARN"日志断言
- P2-1：限频计时由 System.currentTimeMillis 改注入 clock.millis()（可测），
  补"60秒窗口过后恢复记录"用例
- P2-2：AuditTrailIntegrationTest.readEvent 改轮询目标 action 行（消除异步竞态）
- P2-3：setModule 空/null 清除用例补齐（与 errorCode 对称，新增2个）
- P2-4：servlet 守卫负向测试（FilteredClassLoader 隐藏 jakarta.servlet.Filter）
- 发现并修复：Map.copyOf 不保序使"保留前20键"契约失去确定语义 →
  AuditEvent 改 Collections.unmodifiableMap(LinkedHashMap) 保序拷贝
- 门禁：mvn test checkstyle:check 全绿（72/72，0 违规）